--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "json-server --watch db.json --port 3001"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^0.17.3"
+
   }
+  
 }
